--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.47.2",
+    "flatted": "^3.3.2",
     "lodash": "^4.17.21",
     "matter-js": "^0.20.0",
     "next": "15.0.4",
